vagrant/istio/demo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: topdog-gateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - topdog.192.168.99.101.xip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hurl-gateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - hurl.192.168.99.101.xip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webnull-gateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - webnull.192.168.99.101.xip.io
