vagrant/istio/demo-istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: gateway
  namespace: default
spec:
  rules:
  - host: topdog.192.168.99.101.xip.io
    http:
      paths:
      - backend:
          serviceName: topdogui
          servicePort: 5000
        path: /.*
  - host: webnull.192.168.99.101.xip.io
    http:
      paths:
      - backend:
          serviceName: webnull
          servicePort: 8080
        path: /.*
  - host: hurl.192.168.99.101.xip.io
    http:
      paths:
      - backend:
          serviceName: hurl
          servicePort: 8080
        path: /.*
