vagrant/istio/zipkin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: zipkin-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP2
    hosts:
    - zipkin.192.168.99.101.xip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zipkin
  namespace: istio-system
spec:
  host: zipkin.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE      
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin
  namespace: istio-system
spec:
  hosts:
  - zipkin
  - zipkin.192.168.99.101.xip.io
  gateways:
  - zipkin-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: zipkin.istio-system.svc.cluster.local
        port:
          number: 9411
